Fix small horizontal scroll

--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,7 +1,5 @@
 .main-header{
     min-height: 100vh;
-    width: 100vw;
-    // width: 100%;
   
     // Multiple backgrounds: a gradient and a hero image
     background: 
