--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -189,7 +189,6 @@ body {
 
 .main-header {
   min-height: 100vh;
-  width: 100vw;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.1)), to(black)), url("../images/cover.jpg") center center no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.1), black), url("../images/cover.jpg") center center no-repeat;
   background-size: cover;
